# MorphoBot

./: .gitignore  README.md  pyproject.toml
bot/: .flake8  Dockerfile.dev  docker-compose-dev.yml  pyproject.toml
bot/bot/: __init__.py  env.example  handlers.py  main.py  settings.py
bot/src/: handlers.py  main.py  settings.py
configs/: pyproject.toml
configs/configs/: __init__.py
configs/configs/cyclegan_utkfaces/: __init__.py  model.py
configs/configs/router_utkfaces/: __init__.py  augmentations.py  dataset.py  model.py  training.py
data/: pyproject.toml
data/data/: __init__.py  image_folders.py  types.py  utils.py  utkfaces_aligned.py
data/gender_datasets/utkfaces/: download_utkfaces.py
data/scripts/: build_aligned_dataset_utkfaces.py  build_alignment_templates_utkfaces.py  build_utkfaces_manifest_dlib_detector.py  download_utkfaces.py
mlflow/: .env.example  docker-compose-dev.yml
mlflow/mlflow/: Dockerfile
mlflow_registry/: .flake8  Dockerfile.dev  docker-compose-dev.yml  pyproject.toml
mlflow_registry/mlflow_registry/: __init__.py  config.py  experiments.py  search.py  tag_profiles.py  tags.py  uri_mapping.py
mlflow_registry/scripts/: register_third_party.py
models/: pyproject.toml
models/models/: __init__.py
models/models/cyclegan/: __init__.py  discriminator.py  generator.py
models/models/routing/: __init__.py  resnet_classifier.py
services/gender_translation/: Dockerfile.dev  docker-compose-dev.yml  env.example  pyproject.toml
services/gender_translation/gender_translation/: __init__.py  backend_registry.py  inference.py  interfaces.py  main.py  schema.py  utils.py
services/gender_translation/gender_translation/models/: cyclegan.py
services/routing/: Dockerfile.dev  docker-compose-dev.yml  env.example  pyproject.toml
services/routing/routing/: __init__.py  inference.py  main.py
tests/: __init__.py
tests/bot/: __init__.py  conftest.py
tests/bot/unit/: __init__.py  test_settings.py
tests/data/: __init__.py  test_utils.py  test_utkfaces_aligned.py
tests/mlflow_registry/: __init__.py  test_config.py  test_search.py  test_tag_profiles.py  test_tags.py  test_uri_mapping.py
tests/models/routing/: test_resnet_classifier.py
tests/services/routing/: test_inference.py  test_main.py
tests/vision/: __init__.py  test_dlib68_detector.py  test_procrustes_aligner_5pt.py
tests/workflows/common/: test_config.py  test_data.py
tests/workflows/cyclegan_utkfaces/: test_io.py
training/gender_id/: Dockerfile.dev  docker-compose-dev.yml  pyproject.toml
training/gender_id/data/: __init__.py
training/gender_id/data/detectors/: __init__.py  dlib68.py
training/gender_id/models/: __init__.py  retinanet_gender.py
training/gender_id/scripts/: build_manifest_dlib_detector.py
vision/: pyproject.toml
vision/vision/: __init__.py  dlib68_detector.py  procrustes_aligner_5pt.py  utils.py
workflows/: pyproject.toml
workflows/workflows/: __init__.py
workflows/workflows/common/: __init__.py  config.py  data.py  mlflow_experiment_logger.py  training.py
workflows/workflows/cyclegan/: __init__.py  data.py  io.py  metrics.py  register_cyclegan.py  training.py
workflows/workflows/cyclegan_utkfaces/: io.py  register_cyclegan.py  register_evaluation_models.py
workflows/workflows/router_utkfaces/: augmentations.py  io.py  training.py
