[tool.poetry]
name = "mlflow_registry"
version = "0.1.0"
description = "Utility package for MLFlow registry querying, artifact discovery, and artifact management"
authors = ["Stankevich Andrey <stankevich.as@phystech.edu>"]
license = "Apache 2.0"
packages = [{ include = "mlflow_registry" }]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.10.0"
typing-extensions="^4.9"
boto3 = "^1.40.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
mypy = "^1.10"
flake8 = "^7.0.0"
flake8-import-order = "^0.19.2"
flake8-docstrings = "^1.7.0"

[tool.poetry.scripts]
register-third-party = "mlflow_registry.scripts.register_third_party:main"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
exclude = '(^\.venv/|^build/|^dist/)'

[tool.pytest.ini_options]
testpaths = ["../tests/mlflow_registry"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
