[tool.poetry]
name = "gender-id"
version = "0.1.0"
description = "Gender identification model training and experimentation"
authors = ["Stankevich Andrey <stankevich.as@phystech.edu>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.0", source = "pytorch-gpu"}
torchvision = {version = "^0.16.0", source = "pytorch-gpu"}
torchaudio = {version = "^2.1.0", source = "pytorch-gpu"}
mlflow = "^2.10.0"
opencv-python = "^4.8.0"
facenet-pytorch = "^2.5.3"
albumentations = "^1.3.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
hyperopt = "^0.2.7"
tensorboard = "^2.15.0"
pyyaml = "^6.0"
pillow = "^10.0.0"
numpy = "^1.24.0"
boto3 = "^1.40.6"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
black = "^23.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
train-gender = "gender_id.experiments.train_baseline:main"
evaluate-models = "gender_id.experiments.evaluate:main"
hyperopt-search = "gender_id.experiments.hyperopt_search:main"
prepare-data = "scripts.data_prep:main"

# PyTorch GPU source
[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
